# know-now

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.override.yml.example  docker-compose.yml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
crates/know_now_audit/: Cargo.toml
crates/know_now_bench/: Cargo.toml
crates/know_now_bench/benches/: pipeline.rs
crates/know_now_bench/src/: lib.rs
crates/know_now_cache/: Cargo.toml
crates/know_now_catalog/: Cargo.toml
crates/know_now_cli/: Cargo.toml
crates/know_now_cli/src/: audit.rs  context.rs  lib.rs  main.rs  output.rs
crates/know_now_cli/src/commands/: admin.rs  check.rs  config.rs  diff.rs  doctor.rs  examples.rs  explain.rs  generate.rs  id.rs  init.rs  issues.rs  lock.rs  mod.rs  policy.rs  review.rs  schema.rs  serve.rs  session.rs  support.rs  validate.rs  version.rs
crates/know_now_cli/tests/: cli_contract.rs  e2e_phase3.rs  metadata_stability.rs
crates/know_now_codegen/: Cargo.toml
crates/know_now_contract/: Cargo.toml
crates/know_now_core/: Cargo.toml
crates/know_now_core/src/: lib.rs  project_loader.rs  projection.rs
crates/know_now_core/tests/: determinism.rs  multifile_discovery.rs  nfr_scalability.rs  phase1_e2e.rs  postgres_live.rs  proptest_pipeline.rs
crates/know_now_diagnostics/: Cargo.toml
crates/know_now_diagnostics/src/: diagnostic.rs  lib.rs  logging.rs  render_json.rs  render_text.rs  stage.rs  test_support.rs
crates/know_now_diagnostics/tests/: snapshots.rs
crates/know_now_diagnostics/tests/snapshots/: snapshots__json_full_diagnostic_snapshot.snap  snapshots__json_minimal_diagnostic_snapshot.snap  snapshots__json_multiple_diagnostics_snapshot.snap  snapshots__text_full_diagnostic_snapshot.snap  snapshots__text_help_only_diagnostic_snapshot.snap  snapshots__text_minimal_diagnostic_snapshot.snap
crates/know_now_diff/: Cargo.toml
crates/know_now_fitness/: Cargo.toml  README.md
crates/know_now_gen_dbt/: Cargo.toml
crates/know_now_gen_docs/: Cargo.toml
crates/know_now_gen_docs/src/: lib.rs  phrases.rs
crates/know_now_gen_docs/tests/: snapshots.rs
crates/know_now_gen_docs/tests/snapshots/: snapshots__docs_customer_entity_snapshot.snap  snapshots__docs_order_entity_snapshot.snap  snapshots__docs_overview_snapshot.snap
crates/know_now_gen_er/: Cargo.toml
crates/know_now_gen_fixtures/: Cargo.toml
crates/know_now_gen_fixtures/src/: lib.rs  prng.rs  values.rs
crates/know_now_gen_fixtures/tests/: snapshots.rs
crates/know_now_gen_fixtures/tests/snapshots/: snapshots__fixture_customer_csv_snapshot.snap  snapshots__fixture_order_csv_snapshot.snap  snapshots__fixture_readme_snapshot.snap
crates/know_now_gen_postgres/: Cargo.toml
crates/know_now_gen_postgres/src/: lib.rs  migrations.rs  type_map.rs
crates/know_now_gen_postgres/tests/: snapshots.rs
crates/know_now_gen_postgres/tests/snapshots/: snapshots__postgres_ddl_multi_entity_snapshot.snap  snapshots__postgres_ddl_snapshot.snap
crates/know_now_gen_quality/: Cargo.toml
crates/know_now_gen_quality/src/: lib.rs
crates/know_now_gen_quality/tests/: snapshots.rs
crates/know_now_gen_quality/tests/snapshots/: snapshots__quality_contract_customer_snapshot.snap  snapshots__quality_contract_order_snapshot.snap
crates/know_now_identity/: Cargo.toml
crates/know_now_ir/: Cargo.toml
crates/know_now_lock/: Cargo.toml
crates/know_now_metadata/: Cargo.toml
crates/know_now_metadata/src/: authoring.rs  budgets.rs  fixtures.rs  lib.rs  parser.rs  span.rs  test_support.rs
crates/know_now_metadata/tests/: ci_templates_valid_yaml.rs  docs_examples.rs  proptest_roundtrip.rs
crates/know_now_policy/: Cargo.toml
crates/know_now_policy/src/: dc_standard.rs  declarative.rs  discovery.rs  engine.rs  lib.rs  manifest.rs
crates/know_now_policy/tests/: mutation_policy.rs
crates/know_now_server/: Cargo.toml  build.rs
crates/know_now_server/src/: api.rs  launch_info.rs  launch_token.rs  lib.rs  routes.rs  security.rs  session.rs  static_dashboard.rs
crates/know_now_server/tests/: integration.rs  security.rs
crates/know_now_templates/: Cargo.toml
crates/know_now_templates/src/: filters.rs  lib.rs  manifest.rs  render.rs
crates/know_now_toolchain/: Cargo.toml
crates/know_now_validate/: Cargo.toml
crates/know_now_validate/src/: builder.rs  fixtures.rs  graph.rs  lib.rs
crates/know_now_writer/: Cargo.toml
docs/: PRD.md  README.md  architecture.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-yaml-parser-serde-saphyr.md  0003-yaml-authoring-subset.md  0004-template-renderer-minijinja-restricted.md  0005-frontend-package-manager-pnpm.md  0006-trunk-based-development-main-no-prs.md  0007-review-gate-different-agent-via-mcp-agent-mail.md  0008-structured-logging-tracing.md  README.md
docs/dev/: commit-conventions.md  compatibility.md  logging.md  manifest-schema.json  release-notes-template.md  release.md  repo-layout.md  security.md  versioning.md
docs/user/: admin-scan.md  approved-versions.md  ci-recipes.md  cli-reference.md  dbt-customization.md  dbt-validation.md  demo.md  docker-compose.md  doctor.md  domains-modules.md  explain.md  generated-output.md  governance.md  install.md  lockfile.md  logical-types.md  metadata-reference.md  open-questions-assumptions.md  ownership.md  policy-packs.md  regeneration-safety.md  semantic-types.md  support-bundle.md  template-packs.md  troubleshooting.md  yaml-subset.md
examples/ci/: README.md
examples/dbt-validation/: mode-dbt-core.yml  mode-dbt-fusion.yml  mode-dbt.yml  mode-docker-locked.yml  mode-docker.yml  mode-none.yml
fixtures/demo_ecommerce/: README.md
fixtures/large_100_entity/: generate.py
fixtures/parser/: alias.yml  anchor.yml  bad_scalar_type.yml  custom_tag.yml  deep_nesting.yml  duplicate_key.yml  include_directive.yml  (+6 more)
web/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
(+137 files in other folders)
