[workspace]
resolver = "2"
members = [
  "crates/know_now_cli",
  "crates/know_now_core",
  "crates/know_now_diagnostics",
  "crates/know_now_metadata",
  "crates/know_now_contract",
  "crates/know_now_identity",
  "crates/know_now_validate",
  "crates/know_now_codegen",
  "crates/know_now_ir",
  "crates/know_now_writer",
  "crates/know_now_lock",
  "crates/know_now_gen_postgres",
  "crates/know_now_gen_dbt",
  "crates/know_now_gen_quality",
  "crates/know_now_gen_docs",
  "crates/know_now_gen_er",
  "crates/know_now_gen_fixtures",
  "crates/know_now_diff",
  "crates/know_now_server",
  "crates/know_now_policy",
  "crates/know_now_templates",
  "crates/know_now_cache",
  "crates/know_now_toolchain",
  "crates/know_now_audit",
  "crates/know_now_fitness",
  "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/data-champion/know-now"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
