[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
know_now_audit = { path = "../crates/know_now_audit" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
