[package]
name = "know_now_cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Local-first metadata-driven data platform generation engine"

[lib]
path = "src/lib.rs"

[[bin]]
name = "know-now"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/know-now-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
know_now_core = { version = "0.1.0", path = "../know_now_core" }
know_now_identity = { version = "0.1.0", path = "../know_now_identity" }
know_now_metadata = { version = "0.1.0", path = "../know_now_metadata", features = ["json-schema"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
