[package]
name = "know_now_cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Local-first metadata-driven data platform generation engine"

[lib]
path = "src/lib.rs"

[[bin]]
name = "know-now"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/know-now-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
know_now_codegen = { version = "0.1.0", path = "../know_now_codegen" }
know_now_contract = { version = "0.1.0", path = "../know_now_contract" }
know_now_core = { version = "0.1.0", path = "../know_now_core" }
know_now_diagnostics = { version = "0.1.0", path = "../know_now_diagnostics" }
know_now_gen_docs = { version = "0.1.0", path = "../know_now_gen_docs" }
know_now_gen_er = { version = "0.1.0", path = "../know_now_gen_er" }
know_now_gen_postgres = { version = "0.1.0", path = "../know_now_gen_postgres" }
know_now_identity = { version = "0.1.0", path = "../know_now_identity" }
know_now_lock = { version = "0.1.0", path = "../know_now_lock" }
know_now_toolchain = { version = "0.1.0", path = "../know_now_toolchain" }
know_now_metadata = { version = "0.1.0", path = "../know_now_metadata", features = ["json-schema"] }
know_now_policy = { version = "0.1.0", path = "../know_now_policy" }
know_now_validate = { version = "0.1.0", path = "../know_now_validate" }
know_now_writer = { version = "0.1.0", path = "../know_now_writer" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"

[lints]
workspace = true
