[package]
name = "know_now_diagnostics"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
test-support = []

[dependencies]
know_now_audit = { version = "0.1.0", path = "../know_now_audit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[lints]
workspace = true

[dev-dependencies]
insta = "1.47.2"
