[package]
name = "know_now_gen_postgres"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
know_now_codegen = { version = "0.1.0", path = "../know_now_codegen" }
know_now_contract = { version = "0.1.0", path = "../know_now_contract" }
know_now_ir = { version = "0.1.0", path = "../know_now_ir" }
serde_json = "1"
sqlparser = { version = "0.55", features = ["visitor"] }

[lints]
workspace = true

[dev-dependencies]
insta = "1.47.2"
