[package]
name = "know_now_gen_quality"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
know_now_codegen = { version = "0.1.0", path = "../know_now_codegen" }
know_now_contract = { version = "0.1.0", path = "../know_now_contract" }
serde_json = "1"

[dev-dependencies]
insta = "1.47.2"

[lints]
workspace = true
