[package]
name = "know_now_metadata"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
test-support = []
json-schema = ["dep:schemars"]

[dependencies]
schemars = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.25"

[lints]
workspace = true
