[package]
name = "know_now_policy"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
know_now_metadata = { version = "0.1.0", path = "../know_now_metadata" }
know_now_diagnostics = { version = "0.1.0", path = "../know_now_diagnostics" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
know_now_metadata = { version = "0.1.0", path = "../know_now_metadata", features = ["test-support"] }
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
