[package]
name = "know_now_server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
allow-generate = []
serve-dashboard = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
http = "1"
hyper = "1"
know_now_core = { version = "0.1.0", path = "../know_now_core" }
know_now_metadata = { version = "0.1.0", path = "../know_now_metadata" }
know_now_writer = { version = "0.1.0", path = "../know_now_writer" }
mime_guess = { version = "2", optional = true }
rust-embed = { version = "8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
