[package]
name = "know_now_templates"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
minijinja = { version = "2", features = ["fuel"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
